# cafe-epos

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
api/: authentication.py  errors.py  mock_payment_gateway.py  models.py  permissions.py  serializers.py  utils.py  views.py
api/management/commands/: seed_menu_items.py
config/: settings.py  urls.py
scripts/: lint.sh  setup.sh
tests/e2e_tests/: test_full_api.py
tests/unit_tests/api/models/: test_tab_recalculate_totals.py
tests/unit_tests/api/payments/: test_payment_logic.py
